Send content in kafka message to prevent log compaction bug