@@ -22,6 +22,7 @@ import org.slf4j.LoggerFactory;
 import org.testcontainers.containers.output.Slf4jLogConsumer;
 import org.testcontainers.redpanda.RedpandaContainer;
 
+import java.util.Collections;
 import java.util.Map;
 
 /**
@@ -36,27 +37,35 @@ public class KafkaTestContainerManager implements QuarkusTestResourceLifecycleMa
 
     @Override
     public Map<String, String> start() {
-        log.info("Starting the Kafka Test Container");
-        kafka = new RedpandaContainer("docker.redpanda.com/vectorized/redpanda");
+        if (!Boolean.parseBoolean(System.getProperty("cluster.tests"))) {
 
-        kafka.addEnv("KAFKA_TRANSACTION_STATE_LOG_REPLICATION_FACTOR", "1");
-        kafka.addEnv("KAFKA_TRANSACTION_STATE_LOG_MIN_ISR", "1");
-        kafka.withLogConsumer(new Slf4jLogConsumer(LoggerFactory.getLogger("kafka-testcontainer")));
-        kafka.start();
+            log.info("Starting the Kafka Test Container");
+            kafka = new RedpandaContainer("docker.redpanda.com/vectorized/redpanda");
 
-        String bootstrapServers = kafka.getBootstrapServers();
+            kafka.addEnv("KAFKA_TRANSACTION_STATE_LOG_REPLICATION_FACTOR", "1");
+            kafka.addEnv("KAFKA_TRANSACTION_STATE_LOG_MIN_ISR", "1");
+            kafka.withListener(() -> "localhost:9092");
+            kafka.withLogConsumer(new Slf4jLogConsumer(LoggerFactory.getLogger("kafka-testcontainer")));
+            kafka.start();
 
-        System.setProperty("bootstrap.servers", bootstrapServers);
+            String bootstrapServers = kafka.getBootstrapServers();
 
-        return Map.of(
-                "bootstrap.servers", bootstrapServers,
-                "registry.events.kafka.config.bootstrap.servers", bootstrapServers,
-                "registry.kafkasql.bootstrap.servers", bootstrapServers);
+            System.setProperty("bootstrap.servers", bootstrapServers);
+
+            return Map.of(
+                    "bootstrap.servers", bootstrapServers,
+                    "registry.events.kafka.config.bootstrap.servers", bootstrapServers,
+                    "registry.kafkasql.bootstrap.servers", bootstrapServers);
+        } else {
+            return Collections.emptyMap();
+        }
     }
 
     @Override
     public void stop() {
-        log.info("Stopping the Kafka Test Container");
-        kafka.stop();
+        if (kafka != null) {
+            log.info("Stopping the Kafka Test Container");
+            kafka.stop();
+        }
     }
 }
